Bug 268385 - [WGSL] Crash when type checking vector field access
Summary: [WGSL] Crash when type checking vector field access
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-30 08:30 PST by Tadeu Zagallo
Modified: 2024-01-30 10:18 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-01-30 08:30:41 PST
...
Comment 1 Tadeu Zagallo 2024-01-30 08:30:44 PST
<rdar://problem/121528527>
Comment 2 Tadeu Zagallo 2024-01-30 08:32:35 PST
Pull request: https://github.com/WebKit/WebKit/pull/23519
Comment 3 EWS 2024-01-30 10:18:16 PST
Committed 273766@main (da9bdbe963c5): <https://commits.webkit.org/273766@main>

Reviewed commits have been landed. Closing PR #23519 and removing active labels.