[WGSL] Crash when type checking vector field access https://bugs.webkit.org/show_bug.cgi?id=268385 rdar://121528527

Reviewed by Mike Wyrzykowski.

vectorFieldAccess can return nullptr if the access is invalid, so we need to check
the result before dereferencing it.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/access-expression.wgsl:

Canonical link: https://commits.webkit.org/273766@main